<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Spotify Streamer</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="top_songs_activity_name">Top 10 Tracks</string>
    <string name="player_activity_name">Song Player</string>
    <string name="search_box_hint">Search for an artist</string>

    <string name="format_duration"><xliff:g id="minutes">%1$02d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g></string>

    <string name="notification_title">Spotify Music Player</string>
    <string name="notification_ticker">Spotify Music Player</string>

    <string name="notification_previous_button">Previous</string>
    <string name="notification_play_button">Play</string>
    <string name="notification_pause_button">Pause</string>
    <string name="notification_stop_button">Stop</string>
    <string name="notification_next_button">Next</string>

    <string name="pref_country_label">Country</string>
    <string name="pref_country_key" translatable="false">country</string>
    <string name="pref_country_default" translatable="false">US</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Streamer Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="action_player">Now Playing</string>

</resources>
