<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="@string/pref_country_default"
        android:entries="@array/pref_country_name"
        android:entryValues="@array/pref_country_code"
        android:key="@string/pref_country_key"
        android:title="@string/pref_country_label" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>
